# cam

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  autotools.sh  cam.1  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  stb_image.c
example/clock/: README.md  clock.c  digitalclock.c
spec/: README.md
src/: Makefile  Makefile.am  Makefile.in  cam.1  cam.c
src/.deps/: cam.Po  stb_image.Po
zsh-completion/: Makefile  Makefile.am  Makefile.in  _cam
